--- a/package.json
+++ b/package.json
@@ -1,20 +1,1 @@
-    {   
-    "name": "week-18-nosql-social-network-api",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-      "start": "node index",
-      "dev": "nodemon index",
-      "seed": "node utils/seed",
-      "heroku-postbuild": "node utils/seed.js"
-    },
-    "dependencies": {
-      "express": "^4.17.1",
-      "mongoose": "^6.0.13"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.9"
-    }
-  }
+{"name":"week-18-nosql-social-network-api","version":"1.0.0","description":"","main":"index.js","license":"MIT","scripts":{"start":"node index","dev":"nodemon index","seed":"node utils/seed","heroku-postbuild":"node utils/seed.js"},"dependencies":{"express":"^4.18.2","mongoose":"^6.0.13"},"devDependencies":{"nodemon":"^2.0.9"}}
