--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-{"name":"week-18-nosql-social-network-api","version":"1.0.0","description":"","main":"index.js","license":"MIT","scripts":{"start":"node index","dev":"nodemon index","seed":"node utils/seed","heroku-postbuild":"node utils/seed.js"},"dependencies":{"express":"^4.18.2","mongoose":"^6.0.13"},"devDependencies":{"nodemon":"^2.0.9"}}
+{
+    "main": "index.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node index.js",
+      "seed": "node utils/seed"
+    },
+    "dependencies": {
+      "express": "^4.18.2",
+      "mongoose": "^6.9.1"
+    }
+  }
